[gd_scene load_steps=10 format=2]

[ext_resource path="res://styling/button_style/CloseButton_normal.stylebox" type="StyleBox" id=1]
[ext_resource path="res://logic/DonateMenu.gd" type="Script" id=2]
[ext_resource path="res://styling/fonts/NotoSans_Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://styling/button_style/ApplyButton_normal.stylebox" type="StyleBox" id=4]
[ext_resource path="res://styling/button_style/CloseButton_hover.stylebox" type="StyleBox" id=5]
[ext_resource path="res://styling/button_style/ApplyButton_hover.stylebox" type="StyleBox" id=6]
[ext_resource path="res://styling/button_style/CloseButton_pressed.stylebox" type="StyleBox" id=7]
[ext_resource path="res://styling/fonts/NotoSans.tres" type="DynamicFont" id=8]
[ext_resource path="res://styling/button_style/ApplyButton_pressed.stylebox" type="StyleBox" id=9]

[node name="DonateMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -400.0
margin_right = 340.0
margin_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 660.0
margin_bottom = 740.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 660.0
margin_bottom = 181.0

[node name="MenuTitle" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 660.0
margin_bottom = 58.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Donation"
align = 1
autowrap = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 660.0
margin_bottom = 181.0
custom_fonts/font = ExtResource( 8 )
text = "Thank you for being a generous brickbuster!"
align = 1
autowrap = true

[node name="VBoxContainerText" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 660.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainerText"]
margin_right = 660.0
margin_bottom = 181.0

[node name="MeTitle" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainerText/VBoxContainer"]
margin_right = 660.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "Me, Clau Cambra"
autowrap = true

[node name="MeDesc" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainerText/VBoxContainer"]
margin_top = 62.0
margin_right = 660.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
text = "The guy that created this game. I hope you've been enjoying it!"
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainerText"]
margin_top = 191.0
margin_right = 660.0
margin_bottom = 372.0

[node name="GodotTitle" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainerText/VBoxContainer2"]
margin_right = 660.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "Godot"

[node name="GodotDesc" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainerText/VBoxContainer2"]
margin_top = 62.0
margin_right = 660.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
text = "The awesome engine that makes this game possible."
autowrap = true

[node name="ButtonsGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 620.0
margin_right = 660.0
margin_bottom = 740.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LearnMeButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGridContainer"]
margin_right = 310.0
margin_bottom = 58.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 8 )
text = "My projects"

[node name="LearnGodotButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGridContainer"]
margin_left = 314.0
margin_right = 660.0
margin_bottom = 58.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 8 )
text = "About Godot"

[node name="MeDonateButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGridContainer"]
margin_top = 62.0
margin_right = 310.0
margin_bottom = 120.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Donate to me"

[node name="GodotDonateButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGridContainer"]
margin_left = 314.0
margin_top = 62.0
margin_right = 660.0
margin_bottom = 120.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Donate to Godot"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="HBoxContainer"]
margin_right = 680.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 8 )
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="toggled" from="MarginContainer/VBoxContainer/ButtonsGridContainer/LearnMeButton" to="." method="_on_LearnMeButton_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsGridContainer/LearnGodotButton" to="." method="_on_LearnGodotButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsGridContainer/MeDonateButton" to="." method="_on_MeDonateButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsGridContainer/GodotDonateButton" to="." method="_on_GodotDonateButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
